# python-typeshed

./: README  setup.cfg
PyQt5/QtCore/: __init__.pyi
psycopg2/: __init__.pyi
src/psycopg2-stubs/: __init__.pyi  extensions.pyi
