[metadata]
name = fanficdev-python-typeshed
version = 0.0.1
author = iris
author_email = iris@serv.pink
description = mypy type stubs covering psycopg2, psycopg2.extensions, and PyQt5.QtCore
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/FanFicDev/python-typeshed
project_urls =
	Bug Tracker = https://github.com/FanFicDev/python-typeshed/issues
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = psycopg2-stubs, PyQt5-stubs
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.pyi
